--- a/catalogue.css
+++ b/catalogue.css
@@ -1,3 +1,29 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
+
+
 body {
     padding: 25px;
 }
+
+
+/* 
+hr {
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+    
+  } */
+
+  .productHeader {
+      font-family: Montserrat;
+      font-weight: 600;
+  }
+
+  .productSubHeading {
+    font-family: Montserrat;
+    font-weight: 400;
+  }
